--- a/asset/style.css
+++ b/asset/style.css
@@ -1,9 +1,18 @@
-.content-wrapper {
-    padding: 10px;
+.card {
+    min-height: 100%;
+}
+.card-title {
+    font-size: 1rem;
+    font-weight: bold;
+}
+@media (max-width: 576px) {
+    .card-title {
+        font-size: 0.9rem;
+    }
 }
 
-.card {
-    border: none;
+.content-wrapper {
+    padding: 10px;
 }
 
 .card-header {
